--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build  && node app.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -20,7 +20,17 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-materialize": "^15.0.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "express": "^4.15.2",
+    "jsonwebtoken": "^7.4.0",
+    "materialize-css": "^0.98.2",
+    "mongoose": "^4.9.8",
+    "mongoose-unique-validator": "^1.0.5",
+    "morgan": "^1.8.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
